--- a/example.html
+++ b/example.html
@@ -72,12 +72,12 @@
             CALL list (items)
 
     list items
-        EACH (items)
+        EACH cur (items)
             li.item
-                @num CURRENT
+                @num (cur)
                 "item: "
                 strong
-                    CURRENT
+                    (cur)
                     "!"
 
     sep
