--- a/test/index.html
+++ b/test/index.html
@@ -95,6 +95,12 @@ eachtest2 arg
                         (key + ' = ' + val)
                 "|"
 
+unescaped
+    div
+        @aa """s"<>ss"""
+        ATTR '''he''' '''ha'''
+    """<p>"hello"</p>"""
+    '''<a>'world'</a>'''
 </script>
 <script src="../browser.js"></script>
 <script src="test.js"></script>
