--- a/test/index.html
+++ b/test/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" href="3rdparty/qunit-1.12.0.css">
-    <script src="3rdparty/qunit-1.12.0.js"></script>
-    <script src="3rdparty/concat.js"></script>
+    <link rel="stylesheet" href="../node_modules/qunitjs/qunit/qunit.css">
+    <script src="../node_modules/qunitjs/qunit/qunit.js"></script>
+    <script src="../node_modules/concat.js/concat.js"></script>
     <script src="../conkitty.js"></script>
 </head>
 <body>
