Weird comments parser fix.

--- a/test/index.html
+++ b/test/index.html
@@ -11,6 +11,8 @@
 <div id="qunit"></div>
 <div id="container"></div>
 <script type="concat.js/template">
+/*/ Comment test
+*/
 page
     div.class#id[data-ololo=123].ahah
         "Hello "
