More comments to test.

--- a/test/index.html
+++ b/test/index.html
@@ -21,6 +21,7 @@ page
             (function() { return 'ld'; })
         "!"
 
+/* Another comment test */
 tpl1 arg1 arg2
     div
         ATTR ('a' + 1) "bebe"
@@ -49,6 +50,9 @@ tpl1 arg1 arg2
             (somevar4)
             "!!!"
 
+/* Mulitline
+   comment
+   test */
 tpl-2 a
     h1
         (a)
@@ -96,6 +100,7 @@ eachtest2 arg
                         (key + ' = ' + val)
                 "|"
 
+// More comment
 unescaped
     div
         @aa """s"<>ss"""
