--- a/test/index.html
+++ b/test/index.html
@@ -21,6 +21,7 @@ page
             (function() { return 'ld'; })
         "!"
 
+
 /* Another comment test */
 tpl1 arg1 arg2
     div
@@ -50,6 +51,7 @@ tpl1 arg1 arg2
             (somevar4)
             "!!!"
 
+
 /* Mulitline
    comment
    test */
@@ -67,6 +69,7 @@ tpl-2 a
         OTHERWISE
             "nothing"
 
+
 tpl3 b
     CHOOSE
         WHEN (b)
@@ -76,6 +79,7 @@ tpl3 b
         OTHERWISE
             "BBBBB"
             PAYLOAD
+
 
 eachtest arg
     ul
@@ -87,6 +91,7 @@ eachtest arg
                     b
                         (cur)
                 "|"
+
 
 eachtest2 arg
     EACH (arg)
@@ -100,6 +105,7 @@ eachtest2 arg
                         (key + ' = ' + val)
                 "|"
 
+
 // More comment
 unescaped
     div
@@ -109,13 +115,16 @@ unescaped
     '''<a>'world'</a>'''
     ((('<div>' + 'indeed' + '</div>')))
 
+
 dynamic-call
     CALL ('dynamic-call' + '-call') ('yo')
         "ooooo"
 
+
 dynamic-call-call arg
     PAYLOAD
     (arg + arg + arg)
+
 
 mem-test
     MEM "m0" "aaaaa"
@@ -123,13 +132,16 @@ mem-test
         MEM "m1"
     CALL mem-test2
 
+
 mem-test2
     div#m2
         MEM ('m2' + '-999') ({node: this, aa: 'bb'})
 
+
 act-test
     ACT (if (true) { document.actTest = 'Yo!'; })
     ACT (function() { document.actTest2 = 'Hahaha'; })
+
 
 trigger-test
     div
@@ -140,10 +152,40 @@ trigger-test
             TRIGGER "span1" (456)
             TRIGGER "span2"
 
+
 with-test e
     WITH details (e.ololo.piupiu)
         (details)
 
+
+lazy-payload-test
+    ACT (window._lazyPayload = 1)
+
+    h1
+        CALL lazy-payload-inner "test1"
+            span
+                (window._lazyPayload++)
+    h2
+        CALL lazy-payload-inner "test2"
+    h3
+        CALL lazy-payload-inner "test3"
+            em
+                (window._lazyPayload++)
+
+
+lazy-payload-inner prefix
+    TEST PAYLOAD
+        TEST PAYLOAD
+            p
+                (prefix)
+                PAYLOAD
+    h6
+        (prefix)
+        PAYLOAD
+    TEST PAYLOAD
+        div
+            (prefix)
+            PAYLOAD
 </script>
 <script src="../browser.js"></script>
 <script src="test.js"></script>
