Cleaning up test remainings.

--- a/test/index.html
+++ b/test/index.html
@@ -172,6 +172,8 @@ lazy-payload-test
             em
                 (window._lazyPayload++)
 
+    ACT (delete window._lazyPayload)
+
 
 lazy-payload-inner prefix
     TEST PAYLOAD
