Empty attribute value fix in selectors.

--- a/test/index.html
+++ b/test/index.html
@@ -14,7 +14,7 @@
 /*/ Comment test
 */
 page
-    div.class#id[data-ololo=123].ahah
+    div.class#id[data-ololo=123].ahah[attr1][attr2=""]
         "Hello "
         strong
             ('wo' + 'r')
