Passing 0.4.x version tests.

--- a/test/index.html
+++ b/test/index.html
@@ -5,221 +5,11 @@
     <link rel="stylesheet" href="../node_modules/qunitjs/qunit/qunit.css">
     <script src="../node_modules/qunitjs/qunit/qunit.js"></script>
     <script src="../node_modules/concat.js/concat.js"></script>
-    <script src="../conkitty.js"></script>
 </head>
 <body>
 <div id="qunit"></div>
 <div id="container"></div>
-<script type="concat.js/template">
-/*/ Comment test
-*/
-page
-    div.class#id[data-ololo=123].ahah[attr1][attr2=""]
-        "Hello "
-        strong
-            ('wo' + 'r')
-            (function() { return 'ld'; })
-        "!"
-
-
-/* Another comment test */
-tpl1 arg1 arg2
-    div
-        ATTR ('a' + 1) "bebe"
-
-        (arg2 + arg2)
-
-        CALL tpl-2 (arg1 + 'yo')
-            em
-                "cool"
-            CALL tpl3
-                "hihihi"
-        CALL tpl-2 "test"
-
-        SET somevar ({a: {b: arg1}})
-        SET somevar2
-            p
-                "000"
-
-        WITH somevar3 (somevar.a.b.c)
-            "no"
-        ELSE
-            "yes"
-
-        WITH somevar4 (somevar.a.b)
-            (((somevar2)))
-            (somevar4)
-            "!!!"
-
-
-/* Mulitline
-   comment
-   test */
-tpl-2 a
-    h1
-        (a)
-    TEST PAYLOAD
-        "aaa"
-    CHOOSE
-        WHEN PAYLOAD
-            h3
-                "1"
-                PAYLOAD
-                "1"
-        OTHERWISE
-            "nothing"
-
-
-tpl3 b
-    CHOOSE
-        WHEN (b)
-            "bbbbb"
-            (b)
-            "bbbbb"
-        OTHERWISE
-            "BBBBB"
-            PAYLOAD
-
-
-eachtest arg
-    ul
-        EACH cur (arg)
-            li
-                (cur)
-                "|"
-                EACH cur (cur)
-                    b
-                        (cur)
-                "|"
-
-
-eachtest2 arg
-    EACH (arg)
-        "eeee"
-    ul
-        EACH value (arg)
-            li
-                "|"
-                EACH key val (value)
-                    b
-                        (key + ' = ' + val)
-                "|"
-
-
-// More comment
-unescaped
-    div
-        @aa """s"<>ss"""
-        ATTR '''he''' '''ha'''
-    """<p>"hello"</p>"""
-    '''<a>'world'</a>'''
-    ((('<div>' + 'indeed' + '</div>')))
-
-
-dynamic-call
-    CALL ('dynamic-call' + '-call') ('yo')
-        "ooooo"
-
-
-dynamic-call-call arg
-    PAYLOAD
-    (arg + arg + arg)
-
-
-mem-test
-    MEM "m0" "aaaaa"
-    div#m1
-        MEM "m1"
-    CALL mem-test2
-
-
-mem-test2
-    div#m2
-        MEM ('m2' + '-999') ({node: this, aa: 'bb'})
-
-
-act-test
-    ACT (if (true) { document.actTest = 'Yo!'; })
-    ACT (function() { document.actTest2 = 'Hahaha'; })
-
-
-trigger-test
-    div
-        TRIGGER "div1" (123)
-    p
-        TRIGGER "p1" (234) (345)
-        span
-            TRIGGER "span1" (456)
-            TRIGGER "span2"
-
-
-with-test e
-    WITH details (e.ololo.piupiu)
-        (details)
-
-
-lazy-payload-test
-    ACT (window._lazyPayload = 1)
-
-    h1
-        CALL lazy-payload-inner "test1"
-            span
-                (window._lazyPayload++)
-    h2
-        CALL lazy-payload-inner "test2"
-    h3
-        CALL lazy-payload-inner "test3" "test4"
-            em
-                (window._lazyPayload++)
-
-    ACT (delete window._lazyPayload)
-
-
-lazy-payload-inner prefix
-    TEST PAYLOAD
-        TEST PAYLOAD
-            p
-                (prefix)
-                PAYLOAD
-    h6
-        (prefix)
-        PAYLOAD
-    TEST PAYLOAD
-        div
-            (prefix)
-            PAYLOAD
-
-
-safe-call-test
-    CALL safe-call-test-inner (true)
-        span
-            "payload"
-    ELSE
-        em
-            "error1"
-    CALL safe-call-test-inner (false)
-        "ok"
-    ELSE
-        strong
-            "error2"
-
-    CALL safe-call-test-inner (true)
-
-
-    ELSE
-        div
-            "error3"
-
-
-safe-call-test-inner error
-    CHOOSE
-        WHEN (error)
-            ACT (throw new Error('No pasaran'))
-        OTHERWISE
-            p
-                PAYLOAD
-</script>
-<script src="../browser.js"></script>
+<script src="../tmp/test.ctpl.js"></script>
 <script src="test.js"></script>
 </body>
 </html>
