--- a/test/index.min.html
+++ b/test/index.min.html
@@ -5,12 +5,11 @@
     <link rel="stylesheet" href="../node_modules/qunitjs/qunit/qunit.css">
     <script src="../node_modules/qunitjs/qunit/qunit.js"></script>
     <script src="../node_modules/concat.js/concat.js"></script>
-    <script src="../conkitty.js"></script>
 </head>
 <body>
 <div id="qunit"></div>
 <div id="container"></div>
-<script src="../tmp/test.ctpl.js"></script>
+<script src="../tmp/test.ctpl.min.js"></script>
 <script src="test.js"></script>
 </body>
 </html>
