--- a/test/index.min.html
+++ b/test/index.min.html
@@ -10,6 +10,7 @@
 <div id="qunit"></div>
 <div id="container"></div>
 <script src="../tmp/test.ctpl.min.js"></script>
-<script src="test.js"></script>
+<script src="basic.js"></script>
+<script src="selectors.js"></script>
 </body>
 </html>
