--- a/test/index.html
+++ b/test/index.html
@@ -12,5 +12,6 @@
 <script src="../tmp/test.ctpl.js"></script>
 <script src="basic.js"></script>
 <script src="selectors.js"></script>
+<script src="nodes.js"></script>
 </body>
 </html>
