Ability to return values from templates.

--- a/test/index.html
+++ b/test/index.html
@@ -13,5 +13,6 @@
 <script src="basic.js"></script>
 <script src="selectors.js"></script>
 <script src="nodes.js"></script>
+<script src="ret.js"></script>
 </body>
 </html>
