Namespaces and includes support.

--- a/test/index.html
+++ b/test/index.html
@@ -4,15 +4,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="../node_modules/qunitjs/qunit/qunit.css">
     <script src="../node_modules/qunitjs/qunit/qunit.js"></script>
-    <script src="../node_modules/concat.js/concat.js"></script>
 </head>
 <body>
 <div id="qunit"></div>
 <div id="container"></div>
+<script src="../tmp/test.common.js"></script>
 <script src="../tmp/test.ctpl.js"></script>
 <script src="basic.js"></script>
 <script src="selectors.js"></script>
 <script src="nodes.js"></script>
 <script src="ret.js"></script>
+<script src="namespaces.js"></script>
 </body>
 </html>
