--- a/test/index.min.html
+++ b/test/index.min.html
@@ -15,5 +15,6 @@
 <script src="nodes.js"></script>
 <script src="ret.js"></script>
 <script src="namespaces.js"></script>
+<script src="classes.js"></script>
 </body>
 </html>
