--- a/index.html
+++ b/index.html
@@ -1,37 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
-
-    <title>Conkitty by hoho</title>
-  </head>
-
-  <body>
-
-    <header>
-      <div class="container">
-        <h1>Conkitty</h1>
-        <h2>Conkitty Template Engine</h2>
-
-        <section id="downloads">
-          <a href="https://github.com/hoho/conkitty/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/hoho/conkitty/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/hoho/conkitty" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
-
-    <div class="container">
-      <section id="main_content">
-        <p>Here be dragons.</p>
-      </section>
-    </div>
-
-    
-  </body>
-</html>
+<!doctype html><html><head><meta charset="utf-8"><link rel="stylesheet" type="text/css" href="|/|.css" media="screen"><title>Conkitty</title></head><body><header class="b-header"><h1>Conkitty Template Engine<a href="https://github.com/hoho/conkitty">View on GitHub</a></h1></header><p style="text-align: center; margin: 50px;">Here be dragons.<br><br>But <a href="https://github.com/hoho/conkitty">GitHub readme is available</a>.</p></body></html>
